frontend/tests/errors/ER-039/index_non_indexable_operand/test.vx
// @rfc: docs/vexel-rfc.md#runtime-semantics
// @desc: Indexing requires array or string operands. | Reject indexing on non-indexable operands

&^main() -> #i32 {
    1[0]
}
